# Sonixx

./: README.md  SonixxAudioRouter.spec  guide.md  main.py  pyproject.toml  requirements.txt  run.bat  settings.json  sonixx_study.md
app/: __init__.py  audio_router.py  driver.py  ui.py
