[project]
name = "soundboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.16",
    "customtkinter>=5.2.2",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "process-audio-capture>=1.0.0",
    "psutil>=7.2.2",
    "pyaudiowpatch>=0.2.12.8",
    "pycaw>=20251023",
    "pyinstaller>=6.20.0",
    "tksvg>=0.7.4",
]
